--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/abdelrahman-tarek-0/we-quota/issues"
   },
-  "homepage": "https://github.com/abdelrahman-tarek-0/we-quota#readme"
+  "homepage": "https://github.com/abdelrahman-tarek-0/we-quota#readme",
+  "dependencies": {
+    "we-te-login": "^1.5.4"
+  }
 }
