--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "we quota grbber and modifier",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint --ext .js,.jsx src/**/*.js --fix",
+    "prettier": "prettier --write src/**/*.js",
+    "format": "npm run prettier && npm run eslint"
   },
   "repository": {
     "type": "git",
@@ -25,5 +28,16 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "we-te-login": "^1.5.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.4"
   }
 }
