--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "we quota grbber and modifier",
   "main": "index.js",
+  "engines": {
+    "node": "v16.15.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint --ext .js,.jsx src/**/*.js --fix",
@@ -26,6 +29,7 @@
   },
   "homepage": "https://github.com/abdelrahman-tarek-0/we-quota#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "we-te-login": "^1.5.4"
   },
