--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint --ext .js,.jsx src/**/*.js --fix",
     "prettier": "prettier --write src/**/*.js",
-    "format": "npm run prettier && npm run eslint"
+    "format": "npm run prettier && npm run eslint",
+    "start": "node ./src/app/app.js"
   },
   "repository": {
     "type": "git",
