--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
-    "we-te-login": "^1.5.7"
+    "prompt-sync": "^4.2.0",
+    "we-te-login": "^1.6.9"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
